[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.119.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-extra-types>=2.11.0",
    "pydantic[email]>=2.12.3",
    "pyjwt>=2.10.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
]

[tool.coverage.run]
source = ["."]
omit = ["test/*", ".venv/*"]
